--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 rvm:
-  1.8.7
-  ree
-  1.9.2
-  rbx
-  rbx-2.0
+  - 1.8.7
+  - ree
+  - 1.9.2
+  - rbx
+  - rbx-2.0
 before_script:
   - "psql -c 'create database rapns_test;' -U postgres >/dev/null"
