Certificate password can be specified in rapns.yml

--- a/lib/generators/templates/rapns.yml
+++ b/lib/generators/templates/rapns.yml
@@ -2,8 +2,10 @@ development:
   host: gateway.sandbox.push.apple.com
   port: 2195
   certificate: development.pem
+  certificate_password:
 
 production:
   host: gateway.push.apple.com
   port: 2195
   certificate: production.pem
+  certificate_password:
