--- a/lib/generators/templates/rapns.yml
+++ b/lib/generators/templates/rapns.yml
@@ -3,9 +3,11 @@ development:
   port: 2195
   certificate: development.pem
   certificate_password:
+  airbrake_notify: true
 
 production:
   host: gateway.push.apple.com
   port: 2195
   certificate: production.pem
   certificate_password:
+  airbrake_notify: true
