--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,13 @@ rvm:
   - 1.9.3
   - 1.8.7
   - ree
+  - jruby-19mode
+  - rbx-19mode
+
+matrix:
+  allow_failures:
+	- rvm: jruby-19mode
+	- rvm: rbx-19mode
+
 before_script:
   - "psql -c 'create database rapns_test;' -U postgres >/dev/null"
