--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+before_script: "psql -c 'create database rapns_test;' -U postgres >/dev/null"
+language: ruby
 rvm:
   - 1.9.2
   - 1.9.3
@@ -7,7 +9,5 @@ rvm:
   - rbx-19mode
 matrix:
   allow_failures:
-	- rvm: jruby-19mode
-	- rvm: rbx-19mode
-before_script:
-  - "psql -c 'create database rapns_test;' -U postgres >/dev/null"
+    - rvm: jruby-19mode
+    - rvm: rbx-19mode
