Fixing database name in config for postgresql

--- a/config/database.yml
+++ b/config/database.yml
@@ -2,7 +2,7 @@
 
 postgresql:
   adapter: postgresql
-  database: postgres
+  database: rapns_test
   host: localhost
   username: rapns_test
   password: ""
