Add support for testing the jdbch2 adapter.

--- a/config/database.yml
+++ b/config/database.yml
@@ -37,3 +37,12 @@ jdbcmysql:
   username: rapns_test
   password: ""
   encoding: utf8
+
+jdbch2:
+  adapter: h2
+  url: jdbc:h2:file:/tmp/rapns_test;AUTO_SERVER=TRUE
+  username: rapns_test
+  password: ""
+  pool: 128
+  timeout: 5000
+  encoding: utf8
