Exclude rbx-19mode from testing Rails 4 - slooowwwww [ci skip]

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ matrix:
       gemfile: Gemfile.rails-4.0
     - rvm: jruby-19mode
       gemfile: Gemfile.rails-4.0
+    - rvm: rbx-19mode
+      gemfile: Gemfile.rails-4.0
