--- a/.travis.yml
+++ b/.travis.yml
@@ -21,3 +21,5 @@ matrix:
       gemfile: Gemfile.rails-4.0
     - rvm: rbx-19mode
       gemfile: Gemfile.rails-4.0
+  allow_failures:
+    - rvm: rbx-19mode
