--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,13 @@ gemfile:
   - Gemfile.rails-4.0
 
 matrix:
+  include:
+    - rvm: 1.9.3
+      gemfile: Gemfile.rails-4.0
+      env: QUALITY=false
+    - rvm: 2.0.0
+      gemfile: Gemfile.rails-4.0
+      env: QUALITY=false
   exclude:
     - rvm: ree
       gemfile: Gemfile.rails-4.0
