--- a/.travis.yml
+++ b/.travis.yml
@@ -22,10 +22,10 @@ matrix:
   exclude:
     - rvm: 1.9.3
       gemfile: Gemfile.rails-4.0
-      env: QUALITY=false
+      env: QUALITY=true
     - rvm: 2.0.0
       gemfile: Gemfile.rails-4.0
-      env: QUALITY=false
+      env: QUALITY=true
     - rvm: ree
       gemfile: Gemfile.rails-4.0
       env: QUALITY=true
