--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: ruby
 rvm:
   - 1.9.3
   - 2.0.0
+  - 2.1.0
   - jruby-19mode
   - rbx-19mode
 gemfile:
@@ -18,6 +19,9 @@ matrix:
     - rvm: 2.0.0
       gemfile: Gemfile.rails-4.0
       env: QUALITY=false
+    - rvm: 2.1.0
+      gemfile: Gemfile.rails-4.0
+      env: QUALITY=false
     - rvm: 2.0.0
       gemfile: Gemfile
       env: ADAPTER=sqlite3
@@ -26,6 +30,9 @@ matrix:
       gemfile: Gemfile.rails-4.0
       env: QUALITY=true
     - rvm: 2.0.0
+      gemfile: Gemfile.rails-4.0
+      env: QUALITY=true
+    - rvm: 2.1.0
       gemfile: Gemfile.rails-4.0
       env: QUALITY=true
     - rvm: jruby-19mode
