--- a/.travis.yml
+++ b/.travis.yml
@@ -43,4 +43,6 @@ matrix:
       env: QUALITY=true
   allow_failures:
     - rvm: rbx-19mode
+      env: QUALITY=false
     - rvm: jruby-19mode
+      env: QUALITY=false
