--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 before_script: "psql -c 'create database rapns_test;' -U postgres >/dev/null"
 language: ruby
+cache: bundler
 rvm:
   - 1.9.3
   - 2.0.0
