--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 before_script: "psql -c 'create database rpush_test;' -U postgres >/dev/null"
 language: ruby
 install: bundle install --local --deployment --no-prune --no-cache --jobs=4
+services:
+  - redis-server
 rvm:
   - 2.0.0
   - 2.1.1
