--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -10,3 +10,12 @@ StringLiterals:
 
 Documentation:
   Enabled: false
+
+MethodLength:
+  Enabled: false
+
+ClassLength:
+  Enabled: false
+
+CyclomaticComplexity:
+  Enabled: false
