--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,6 @@ matrix:
     gemfile: Gemfile.rails-4
     env: CLIENT=active_record
   allow_failures:
-    - rvm: rbx
+    - rvm: rbx-2
     - rvm: jruby
     - env: CLIENT=active_record ADAPTER=sqlite3
