--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ matrix:
     env: CLIENT=active_record
   allow_failures:
   - rvm: jruby
+  - env: ADAPTER=sqlite3
 env:
   global:
     secure: NmFJ2Wk0W4mCce7pLXNcuQEd7Omr+XQxXyVlOQMtve6wwLv+R6r49Rgx7EkkbHd6OhspYoprtGsOPYE1c1fGOXn9Cd9Lf+SXNMmLnhXlvXWY1GDv2ULzL1cbu9dtc7KoHXkFmWYGqjuHzB5IkBFNqSKWaF4L4iM4Oh6MFE4kZ2M=
