--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ matrix:
     gemfile: Gemfile.rails-4
     env: CLIENT=redis
   - rvm: 2.1.2
-    gemfile: Gemfile
+    gemfile: Gemfile.rails-4
     env: CLIENT=active_record ADAPTER=sqlite3
   - rvm: rbx-2
     gemfile: Gemfile.rails-4
@@ -41,6 +41,7 @@ matrix:
     env: CLIENT=active_record
   allow_failures:
   - rvm: jruby
+  - rvm: rbx-2
   - env: CLIENT=active_record ADAPTER=sqlite3
 env:
   global:
