rm Gemfile locks before bundle install

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-before_script: rm Gemfile.*.lock; psql -c 'create database rpush_test;' -U postgres >/dev/null
+before_install: rm Gemfile.*.lock
+before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 language: ruby
 install: bundle install --jobs=4
 services:
