--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ matrix:
     env: CLIENT=active_record
   - rvm: 2.0.0
     gemfile: Gemfile
-    env: CLIENT=redis
+    env: CLIENT=redis QUALITY=true
   - rvm: 2.1.3
     gemfile: Gemfile
     env: CLIENT=redis
