--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
-before_install: rm Gemfile.*.lock
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 language: ruby
-install: bundle install --jobs=4
+install: tools/cached-bundle install --deployment
 services:
 - redis-server
 matrix:
@@ -18,13 +17,13 @@ matrix:
     env: CLIENT=active_record
   - rvm: 2.1.3
     gemfile: Gemfile.rails-4
-    env: CLIENT=active_record
+    env: CLIENT=active_record QUALITY=true
   - rvm: 2.0.0
     gemfile: Gemfile
-    env: CLIENT=redis QUALITY=true
+    env: CLIENT=redis
   - rvm: 2.1.3
     gemfile: Gemfile
-    env: CLIENT=redis
+    env: CLIENT=redis QUALITY=true
   - rvm: 2.0.0
     gemfile: Gemfile.rails-4
     env: CLIENT=redis
@@ -52,6 +51,9 @@ matrix:
   allow_failures:
   - env: CLIENT=active_record ADAPTER=sqlite3
   - rvm: 2.2.0-preview1
+
 env:
   global:
-    secure: NmFJ2Wk0W4mCce7pLXNcuQEd7Omr+XQxXyVlOQMtve6wwLv+R6r49Rgx7EkkbHd6OhspYoprtGsOPYE1c1fGOXn9Cd9Lf+SXNMmLnhXlvXWY1GDv2ULzL1cbu9dtc7KoHXkFmWYGqjuHzB5IkBFNqSKWaF4L4iM4Oh6MFE4kZ2M=
+    - AMAZON_S3_BUCKET=rpush
+    - AMAZON_ACCESS_KEY_ID=AKIAIWENGKCRZZX7NGOQ
+    - secure: "JZSnurdpqClRgy2s99xFaOymuCDaCh8rZmHgj8Wj/KRFNDuEFVq7CgUjAg24shL4aB+uE/sgBemfsuvJLcWT27/7bi1h/idepNdB36l+GhdJj5CovtqPGX9rXv6vp1s0tELgjxTcx17IQ1oZ5iqTozg9UWWpCXtOBB70/aJvTn8="
