--- a/.travis.yml
+++ b/.travis.yml
@@ -17,13 +17,13 @@ matrix:
     env: CLIENT=active_record
   - rvm: 2.1.3
     gemfile: Gemfile.rails-4
-    env: CLIENT=active_record QUALITY=true
+    env: CLIENT=active_record
   - rvm: 2.0.0
     gemfile: Gemfile
     env: CLIENT=redis
   - rvm: 2.1.3
     gemfile: Gemfile
-    env: CLIENT=redis QUALITY=true
+    env: CLIENT=redis
   - rvm: 2.0.0
     gemfile: Gemfile.rails-4
     env: CLIENT=redis
