--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,12 @@ matrix:
   - rvm: 2.1.3
     gemfile: Gemfile.rails-3
     env: CLIENT=active_record
+  - rvm: 1.9.3
+    gemfile: Gemfile
+    env: CLIENT=active_record
+  - rvm: 1.9.3
+    gemfile: Gemfile
+    env: CLIENT=redis
   - rvm: rbx-2.2.10
     gemfile: Gemfile
     env: CLIENT=active_record
@@ -47,6 +53,7 @@ matrix:
     env: CLIENT=active_record
   allow_failures:
   - rvm: 2.2.0-preview1
+  - rvm: 1.9.3
 
 env:
   global:
