--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 language: ruby
 install: tools/cached-bundle install --deployment
