--- a/.travis.yml
+++ b/.travis.yml
@@ -24,22 +24,34 @@ matrix:
   - rvm: 2.1.5
     gemfile: Gemfile
     env: CLIENT=active_record
+  - rvm: 2.2.0
+    gemfile: Gemfile
+    env: CLIENT=active_record
   - rvm: 2.0.0
     gemfile: Gemfile
     env: CLIENT=redis
   - rvm: 2.1.5
+    gemfile: Gemfile
+    env: CLIENT=redis
+  - rvm: 2.2.0
     gemfile: Gemfile
     env: CLIENT=redis
   - rvm: 2.0.0
     gemfile: Gemfile.rails-3
     env: CLIENT=redis
   - rvm: 2.1.5
+    gemfile: Gemfile.rails-3
+    env: CLIENT=redis
+  - rvm: 2.2.0
     gemfile: Gemfile.rails-3
     env: CLIENT=redis
   - rvm: 2.0.0
     gemfile: Gemfile.rails-3
     env: CLIENT=active_record
   - rvm: 2.1.5
+    gemfile: Gemfile.rails-3
+    env: CLIENT=active_record
+  - rvm: 2.2.0
     gemfile: Gemfile.rails-3
     env: CLIENT=active_record
   - rvm: 1.9.3
@@ -60,9 +72,5 @@ matrix:
   - rvm: jruby-1.7.18
     gemfile: Gemfile
     env: CLIENT=redis
-  - rvm: 2.2.0-preview2
-    gemfile: Gemfile
-    env: CLIENT=active_record
   allow_failures:
-    - rvm: 2.2.0-preview2
     - rvm: 1.9.3
