Try cache: :bundler

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,14 @@ language: ruby
 
 sudo: false
 
+cache: :bundler
+
 services:
   - redis-server
 
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 
-install: tools/cached-bundle install --deployment
+#install: tools/cached-bundle install --deployment
 
 env:
   global:
