--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ cache: :bundler
 
 services:
   - redis-server
+  - mongodb
 
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 
@@ -37,6 +38,15 @@ matrix:
     gemfile: Gemfile
     env: CLIENT=redis
   - rvm: 2.0.0
+    gemfile: Gemfile
+    env: CLIENT=mongoid
+  - rvm: 2.1.5
+    gemfile: Gemfile
+    env: CLIENT=mongoid
+  - rvm: 2.2.0
+    gemfile: Gemfile
+    env: CLIENT=mongoid
+  - rvm: 2.0.0
     gemfile: Gemfile.rails-3
     env: CLIENT=redis
   - rvm: 2.1.5
@@ -66,12 +76,18 @@ matrix:
   - rvm: rbx-2.5.2
     gemfile: Gemfile
     env: CLIENT=redis
-  - rvm: jruby-1.7.18
+  - rvm: rbx-2.5.2
+    gemfile: Gemfile
+    env: CLIENT=mongoid
+  - rvm: jruby-1.7.19
     gemfile: Gemfile
     env: CLIENT=active_record
-  - rvm: jruby-1.7.18
+  - rvm: jruby-1.7.19
     gemfile: Gemfile
     env: CLIENT=redis
+  - rvm: jruby-1.7.19
+    gemfile: Gemfile
+    env: CLIENT=mongoid
   allow_failures:
     - rvm: 1.9.3
-    - rvm: jruby-1.7.18
+    - rvm: jruby-1.7.19
