Update jruby to 1.7.23, allow failures for jruby
I know this is not fixing the problem, but I don't know enough at this
point to fix this issue. I found out that the `multi_json` gem is not
getting installed for jRuby. After explicitly setting it as a dependency
in the Gemfile, the next gem was missing, namely `ansi`.

To me, it appears that the runtime dependencies declared in the
`rpush.gemspec` file are ignored for jRuby build. I don't know why. :\

--- a/.travis.yml
+++ b/.travis.yml
@@ -76,16 +76,20 @@ matrix:
   - rvm: rbx-2.5.8
     gemfile: Gemfile
     env: CLIENT=mongoid
-  - rvm: jruby-1.7.20.1
+  - rvm: jruby-1.7.23
     gemfile: Gemfile
     env: CLIENT=active_record
-  - rvm: jruby-1.7.20.1
+  - rvm: jruby-1.7.23
     gemfile: Gemfile
     env: CLIENT=redis
-  - rvm: jruby-1.7.20.1
+  - rvm: jruby-1.7.23
     gemfile: Gemfile
     env: CLIENT=mongoid
   allow_failures:
     - rvm: 1.9.3
-    - rvm: jruby-1.7.20.1
+    - rvm: jruby-1.7.23
       env: CLIENT=active_record
+    - rvm: jruby-1.7.23
+      env: CLIENT=redis
+    - rvm: jruby-1.7.23
+      env: CLIENT=mongoid
