--- a/.travis.yml
+++ b/.travis.yml
@@ -85,6 +85,15 @@ matrix:
   - rvm: jruby-1.7.23
     gemfile: Gemfile
     env: CLIENT=mongoid
+  - rvm: jruby-9.0.4.0
+    gemfile: Gemfile
+    env: CLIENT=active_record
+  - rvm: jruby-9.0.4.0
+    gemfile: Gemfile
+    env: CLIENT=redis
+  - rvm: jruby-9.0.4.0
+    gemfile: Gemfile
+    env: CLIENT=mongoid
   allow_failures:
     - rvm: 1.9.3
     - rvm: jruby-1.7.23
@@ -92,4 +101,10 @@ matrix:
     - rvm: jruby-1.7.23
       env: CLIENT=redis
     - rvm: jruby-1.7.23
+      env: CLIENT=mongoid
+    - rvm: jruby-9.0.4.0
+      env: CLIENT=active_record
+    - rvm: jruby-9.0.4.0
+      env: CLIENT=redis
+    - rvm: jruby-9.0.4.0
       env: CLIENT=mongoid
