--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,9 @@ matrix:
   - rvm: 2.2.2
     gemfile: Gemfile
     env: CLIENT=active_record
+  - rvm: 2.3.0
+    gemfile: Gemfile
+    env: CLIENT=active_record
   - rvm: 2.0.0
     gemfile: Gemfile
     env: CLIENT=redis
@@ -40,6 +43,9 @@ matrix:
   - rvm: 2.2.2
     gemfile: Gemfile
     env: CLIENT=redis
+  - rvm: 2.3.0
+    gemfile: Gemfile
+    env: CLIENT=redis
   - rvm: 2.0.0
     gemfile: Gemfile
     env: CLIENT=mongoid
@@ -47,6 +53,9 @@ matrix:
     gemfile: Gemfile
     env: CLIENT=mongoid
   - rvm: 2.2.2
+    gemfile: Gemfile
+    env: CLIENT=mongoid
+  - rvm: 2.3.0
     gemfile: Gemfile
     env: CLIENT=mongoid
   - rvm: 2.0.0
@@ -56,6 +65,9 @@ matrix:
     gemfile: Gemfile.rails-3
     env: CLIENT=redis
   - rvm: 2.2.2
+    gemfile: Gemfile.rails-3
+    env: CLIENT=redis
+  - rvm: 2.3.0
     gemfile: Gemfile.rails-3
     env: CLIENT=redis
   - rvm: 2.0.0
@@ -65,6 +77,9 @@ matrix:
     gemfile: Gemfile.rails-3
     env: CLIENT=active_record
   - rvm: 2.2.2
+    gemfile: Gemfile.rails-3
+    env: CLIENT=active_record
+  - rvm: 2.3.0
     gemfile: Gemfile.rails-3
     env: CLIENT=active_record
   - rvm: rbx-2.5.8
