--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,16 @@ gcm_test/bin
 spec/tmp/
 .vagrant/
 tmp/
+
+## Environment normalization:
+/.bundle/
+/vendor/bundle
+/lib/bundler/man/
+
+### RubyMine ###
+# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
+
+*.iml
+
+## Directory-based project format:
+.idea/
