--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ rvm:
   - 2.3.4
   - 2.4.1
 
+gemfile:
+  - gemfiles/rails_4.2.gemfile
+  - gemfiles/rails_5.0.gemfile
+  - gemfiles/rails_5.1.gemfile
+
 services:
   - redis-server
   - mongodb
