--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ gemfile:
   - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
   - gemfiles/rails_5.1.gemfile
+  - gemfiles/rails_5.2.gemfile
+  - gemfiles/rails_edge.gemfile
 
 services:
   - redis-server
