--- a/.travis.yml
+++ b/.travis.yml
@@ -42,3 +42,5 @@ matrix:
   fast_finish: true
   allow_failures:
     - gemfile: gemfiles/rails_edge.gemfile
+    - gemfile: gemfiles/rails_5.2.gemfile
+      env: CLIENT=redis
