--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ rvm:
   - 2.3.8
   - 2.4.5
   - 2.5.3
-  - ruby-head
+  - 2.6.0
 
 gemfile:
   - gemfiles/rails_4.2.gemfile
@@ -42,7 +42,7 @@ env:
 matrix:
   fast_finish: true
   allow_failures:
-    - rvm: ruby-head
+    - rvm: 2.6.0
     - gemfile: gemfiles/rails_edge.gemfile
     - gemfile: gemfiles/rails_5.2.gemfile
       env: CLIENT=redis
