Allow rubygems 3.x, use bundler 1.x

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ services:
 
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 before_install:
-  # Rails 4.2 doesn't support bundler 2.0 which comes with rubygems 3.0
-  - gem install rubygems-update -v '<3' && update_rubygems
-  - gem install bundler
+  - gem install rubygems-update && update_rubygems
+  # Rails 4.2 doesn't support bundler 2.0
+  - gem install bundler -v 1.17.3
 
 env:
   matrix:
