--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ gemfile:
   - gemfiles/rails_5.0.gemfile
   - gemfiles/rails_5.1.gemfile
   - gemfiles/rails_5.2.gemfile
-  - gemfiles/rails_edge.gemfile
+  - gemfiles/rails_6.0.gemfile
 
 services:
   - redis-server
@@ -46,6 +46,14 @@ matrix:
   fast_finish: true
   allow_failures:
     - rvm: 2.6.0
-    - gemfile: gemfiles/rails_edge.gemfile
+    - gemfile: gemfiles/rails_6.0.gemfile
+      rvm: 2.5.3
+    - gemfile: gemfiles/rails_6.0.gemfile
+      rvm: 2.6.0
     - gemfile: gemfiles/rails_5.2.gemfile
       env: CLIENT=redis
+  exclude:
+    - gemfile: gemfiles/rails_6.0.gemfile
+      rvm: 2.3.8
+    - gemfile: gemfiles/rails_6.0.gemfile
+      rvm: 2.4.5
