Update rubocop, add .rubocop_todo.yml

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,9 @@
+inherit_from: .rubocop_todo.yml
+
 AllCops:
   Exclude:
     - lib/generators/**/*
+    - vendor/bundle/**/*
 
 LineLength:
   Enabled: false
