Exclude vendor directory on Travis

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,6 +2,7 @@ inherit_from: .rubocop_todo.yml
 
 AllCops:
   Exclude:
+    - gemfiles/vendor/bundle/**/* # This dir only shows up on Travis
     - lib/generators/**/*
     - vendor/bundle/**/*
 
