--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ cache: bundler
 compiler: clang
 
 rvm:
-  - 2.3.8
-  - 2.4.5
+  # - 2.3.8
+  # - 2.4.5
   - 2.5.3
-  - 2.6.1
+  # - 2.6.1
 
 # Build only commits on master for the "Build pushed branches" feature. This
 # prevents building twice on PRs originating from our repo ("Build pushed pull
@@ -23,10 +23,10 @@ branches:
 
 gemfile:
   - gemfiles/rails_4.2.gemfile
-  - gemfiles/rails_5.0.gemfile
-  - gemfiles/rails_5.1.gemfile
-  - gemfiles/rails_5.2.gemfile
-  - gemfiles/rails_6.0.gemfile
+  # - gemfiles/rails_5.0.gemfile
+  # - gemfiles/rails_5.1.gemfile
+  # - gemfiles/rails_5.2.gemfile
+  # - gemfiles/rails_6.0.gemfile
 
 services:
   - postgresql
@@ -49,6 +49,12 @@ before_install:
   # Another try, above doesn't seem to work for Ruby 2.5
   - gem uninstall bundler -v '>= 2' || true
   - gem install bundler -v '< 2'
+  - bundle --version
+  - which bundle
+  - yes | rvm @global do gem uninstall bundler --all
+  - rvm @global do gem install bundler -v 1.17.3
+  - bundle --version
+  - which bundle
 
 env:
   matrix:
