Lock CI bundler version to v1.17.3.
Resolves https://github.com/rpush/rpush/issues/498

Ruby 2.5 ships with bundler 2.x on Travis CI. Rails 4.2 does not support
bundler 2.0, so Bundler is locked to 1.17.3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,20 +35,11 @@ services:
 before_script: psql -c 'create database rpush_test;' -U postgres >/dev/null
 before_install:
   - gem install rubygems-update && update_rubygems
-  # TODO: None of these workarounds seem to work for the Rails 4.2, Ruby 2.5
-  # combination!
-  #
-  # Rails 4.2 doesn't support bundler 2.0, so we have multiple workarounds.
-  # This is just for Rails 2.5 which ships with bundler 2.x on Travis CI while
-  # Ruby 2.6 does not. Taken from:
-  # https://github.com/travis-ci/travis-ci/issues/8717#issuecomment-366500378
-  - "find /home/travis/.rvm/rubies -wholename '*default/bundler-*.gemspec' -delete"
-  # This should help with the other Ruby versions.
-  # Taken from https://docs.travis-ci.com/user/languages/ruby/
-  - gem uninstall -v '>= 2' -i $(rvm gemdir)@global -ax bundler || true
-  # Another try, above doesn't seem to work for Ruby 2.5
-  - gem uninstall bundler -v '>= 2' || true
-  - gem install bundler -v '< 2'
+  # Rails 4.2 doesn't support bundler 2.0, so we need to lock bundler to
+  # v1.17.3. This is just for Ruby 2.5 which ships with bundler 2.x on Travis
+  # CI while Ruby 2.6 does not.
+  - yes | rvm @global do gem uninstall bundler --all
+  - yes | rvm @global do gem install bundler -v 1.17.3 || true
 
 env:
   matrix:
