--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,3 +29,9 @@ Style/SignalException:
 
 Metrics/AbcSize:
   Max: 30
+
+Style/StderrPuts:
+  Enabled: false
+
+Naming/RescuedExceptionsVariableName:
+  Enabled: false
