--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,5 +1,7 @@
 inherit_from: .rubocop_todo.yml
 
+require: rubocop-performance
+
 AllCops:
   Exclude:
     - gemfiles/vendor/bundle/**/* # This dir only shows up on Travis
