Set TargetRubyVersion for RuboCop

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
     - gemfiles/vendor/bundle/**/* # This dir only shows up on Travis
     - lib/generators/**/*
     - vendor/bundle/**/*
+  TargetRubyVersion: 2.3
 
 LineLength:
   Enabled: false
