Thanks contributers when marking as stale

--- a/.github/stale.yml
+++ b/.github/stale.yml
@@ -21,3 +21,5 @@ markComment: >
   This issue has been automatically marked as stale because it has not had
   recent activity. If this is still an issue, please leave another comment.
   This issue will be closed if no further activity occurs.
+
+  Thank you for all your contributions!
