--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,22 +9,22 @@ AllCops:
     - vendor/bundle/**/*
   TargetRubyVersion: 2.3
 
-LineLength:
+Metrics/LineLength:
   Enabled: false
 
-StringLiterals:
+Style/StringLiterals:
   Enabled: false
 
-Documentation:
+Style/Documentation:
   Enabled: false
 
-MethodLength:
+Metrics/MethodLength:
   Enabled: false
 
-ClassLength:
+Metrics/ClassLength:
   Enabled: false
 
-CyclomaticComplexity:
+Metrics/CyclomaticComplexity:
   Enabled: false
 
 Style/SignalException:
