--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ cache: bundler
 compiler: clang
 
 rvm:
-  - 2.3.8
-  - 2.4.7
-  - 2.5.6
-  - 2.6.4
+  - 2.3
+  - 2.4
+  - 2.5
+  - 2.6
 
 # Build only commits on master for the "Build pushed branches" feature. This
 # prevents building twice on PRs originating from our repo ("Build pushed pull
@@ -22,7 +22,6 @@ branches:
     - master
 
 gemfile:
-  - gemfiles/rails_4.2.gemfile
   - gemfiles/rails_5.0.gemfile
   - gemfiles/rails_5.1.gemfile
   - gemfiles/rails_5.2.gemfile
@@ -37,10 +36,7 @@ before_install:
   # https://github.com/rubygems/rubygems/issues/3036
   # https://github.com/rubygems/rubygems/issues/3036#issuecomment-566132226
   - yes | gem update --system
-  # Rails 4.2 doesn't support bundler 2.0, so we need to lock bundler to
-  # v1.17.3. This is just for Ruby 2.5 which ships with bundler 2.x on Travis
-  # CI while Ruby 2.6 does not.
-  - yes | rvm @global do gem install bundler -v 1.17.3 || true
+  - gem install bundler
 
 env:
   matrix:
@@ -49,17 +45,14 @@ env:
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - gemfile: gemfiles/rails_4.2.gemfile
-      rvm: 2.5.6
   exclude:
     - gemfile: gemfiles/rails_6.0.gemfile
-      rvm: 2.3.8
+      rvm: 2.3
     - gemfile: gemfiles/rails_6.0.gemfile
-      rvm: 2.4.7
+      rvm: 2.4
 
 jobs:
   include:
     - stage: Lint
-      rvm: 2.6.4
+      rvm: 2.6
       script: bundle exec rake rubocop
