--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,10 @@ matrix:
       rvm: 2.3
     - gemfile: gemfiles/rails_6.0.gemfile
       rvm: 2.4
+    - gemfile: gemfiles/rails_6.1.gemfile
+      rvm: 2.3
+    - gemfile: gemfiles/rails_6.1.gemfile
+      rvm: 2.4
 
 jobs:
   include:
