--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,12 @@ env:
 matrix:
   fast_finish: true
   exclude:
+    - gemfile: gemfiles/rails_5.0.gemfile
+      rvm: 3.0
+    - gemfile: gemfiles/rails_5.1.gemfile
+      rvm: 3.0
+    - gemfile: gemfiles/rails_5.2.gemfile
+      rvm: 3.0
     - gemfile: gemfiles/rails_6.0.gemfile
       rvm: 2.3
     - gemfile: gemfiles/rails_6.0.gemfile
