--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ rvm:
   - 2.6
   - 2.7
   - 3.0
+  - truffleruby-head
 
 # Build only commits on master for the "Build pushed branches" feature. This
 # prevents building twice on PRs originating from our repo ("Build pushed pull
