--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
 
     strategy:
       matrix:
-        gemfile: ['rails_5.2', 'rails_6.0', 'rails_6.1']
+        gemfile: ['rails_5.2', 'rails_6.0', 'rails_6.1', 'rails_7.0']
 
         ruby: ['2.3', '2.4', '2.5', '2.6', '2.7', '3.0']
 
@@ -62,7 +62,7 @@ jobs:
           # https://github.com/rails/rails/issues/40938
           - ruby: '3.0'
             gemfile: 'rails_5.2'
-          # Rails >= 6 need Ruby >= 2.5
+          # Rails >= 6 requires Ruby >= 2.5
           - ruby: '2.3'
             gemfile: 'rails_6.0'
           - ruby: '2.4'
@@ -71,6 +71,15 @@ jobs:
             gemfile: 'rails_6.1'
           - ruby: '2.4'
             gemfile: 'rails_6.1'
+          # Rails >= 7 requires Ruby >= 2.7
+          - ruby: '2.3'
+            gemfile: 'rails_7.0'
+          - ruby: '2.4'
+            gemfile: 'rails_7.0'
+          - ruby: '2.5'
+            gemfile: 'rails_7.0'
+          - ruby: '2.6'
+            gemfile: 'rails_7.0'
 
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
