--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,6 +6,7 @@ AllCops:
   Exclude:
     - lib/generators/**/*
     - vendor/bundle/**/*
+  NewCops: enable
   TargetRubyVersion: 2.4
 
 Layout/LineLength:
