--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0', 'rails_7.1']
+        gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0']
 
         ruby: ['2.7', '3.0', '3.1']
 
