Rails 7.0 and Ruby 2.7 don't install sqlite3 successfully

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,10 @@ jobs:
 
         client: ['active_record', 'redis']
 
+        exclude:
+          - ruby: '2.7'
+            gemfile: 'rails_7.0'
+
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
