--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,7 +54,7 @@ jobs:
       matrix:
         gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0']
 
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['2.7', '3.0', '3.1', '3.2', '3.3']
 
         client: ['active_record', 'redis']
 
