Drop support for Ruby 2.x (#672)
Still supporting some upstream unsupported versions for now to make it
easier for users of rpush to upgrade.

https://endoflife.date/rails
https://endoflife.date/ruby

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -54,13 +54,9 @@ jobs:
       matrix:
         gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0']
 
-        ruby: ['2.7', '3.0', '3.1']
+        ruby: ['3.0', '3.1']
 
         client: ['active_record', 'redis']
-
-        exclude:
-          - ruby: '2.7'
-            gemfile: 'rails_7.0'
 
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
