--- a/.rubocop_todo.yml
+++ b/.rubocop_todo.yml
@@ -329,6 +329,7 @@ Lint/IneffectiveAccessModifier:
 Lint/MissingSuper:
   Exclude:
     - 'lib/rpush/daemon/adm/delivery.rb'
+    - 'lib/rpush/daemon/apns/delivery.rb'
     - 'lib/rpush/daemon/apns2/delivery.rb'
     - 'lib/rpush/daemon/apnsp8/delivery.rb'
     - 'lib/rpush/daemon/delivery_error.rb'
@@ -342,6 +343,11 @@ Lint/MissingSuper:
     - 'lib/rpush/daemon/wpns/delivery.rb'
     - 'spec/unit/daemon/delivery_spec.rb'
 
+# Offense count: 1
+Lint/NestedMethodDefinition:
+  Exclude:
+    - 'spec/unit/daemon/apns/feedback_receiver_spec.rb'
+
 # Offense count: 5
 # Cop supports --auto-correct.
 Lint/RedundantCopDisableDirective:
@@ -349,6 +355,7 @@ Lint/RedundantCopDisableDirective:
     - 'lib/rpush/client/active_model/gcm/notification.rb'
     - 'lib/rpush/daemon/interruptible_sleep.rb'
     - 'lib/rpush/daemon/rpc/client.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
 
 # Offense count: 1
 # Cop supports --auto-correct.
@@ -362,6 +369,7 @@ Lint/SuppressedException:
   Exclude:
     - 'lib/rpush/daemon/interruptible_sleep.rb'
     - 'lib/rpush/daemon/rpc/client.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
 
 # Offense count: 2
 # Cop supports --auto-correct.
@@ -409,6 +417,12 @@ Metrics/BlockLength:
 # Configuration parameters: IgnoredMethods.
 Metrics/PerceivedComplexity:
   Max: 9
+
+# Offense count: 1
+# Cop supports --auto-correct.
+Migration/DepartmentName:
+  Exclude:
+    - 'lib/rpush/daemon/tcp_connection.rb'
 
 # Offense count: 1
 # Configuration parameters: MinNameLength, AllowNamesEndingInNumbers, AllowedNames, ForbiddenNames.
@@ -462,6 +476,7 @@ Performance/RegexpMatch:
   Exclude:
     - 'lib/rpush/client/active_model/apns/device_token_format_validator.rb'
     - 'lib/rpush/daemon/retry_header_parser.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
     - 'spec/support/active_record_setup.rb'
 
 # Offense count: 16
@@ -473,13 +488,16 @@ Performance/StringIdentifierArgument:
     - 'lib/rpush/daemon/service_config_methods.rb'
     - 'lib/rpush/logger.rb'
     - 'spec/spec_helper.rb'
+    - 'spec/unit/daemon/apns/feedback_receiver_spec.rb'
     - 'spec/unit/daemon/store/active_record/reconnectable_spec.rb'
+    - 'spec/unit/daemon/tcp_connection_spec.rb'
     - 'spec/unit/logger_spec.rb'
 
 # Offense count: 6
 # Cop supports --auto-correct.
 Performance/StringInclude:
   Exclude:
+    - 'lib/rpush/daemon/tcp_connection.rb'
     - 'lib/rpush/daemon/wns/post_request.rb'
     - 'spec/functional_spec_helper.rb'
     - 'spec/support/active_record_setup.rb'
@@ -569,6 +587,7 @@ Style/Encoding:
   Exclude:
     - 'lib/rpush/cli.rb'
     - 'lib/rpush/daemon.rb'
+    - 'lib/rpush/daemon/apns/feedback_receiver.rb'
     - 'lib/rpush/daemon/app_runner.rb'
     - 'rpush.gemspec'
 
@@ -626,6 +645,8 @@ Style/GuardClause:
     - 'lib/rpush/daemon.rb'
     - 'lib/rpush/daemon/adm/delivery.rb'
     - 'lib/rpush/daemon/app_runner.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
+    - 'spec/unit/daemon/apns/feedback_receiver_spec.rb'
 
 # Offense count: 1
 # Cop supports --auto-correct.
@@ -647,6 +668,7 @@ Style/IfUnlessModifier:
     - 'lib/rpush/client/active_model/apns/notification.rb'
     - 'lib/rpush/client/active_model/webpush/app.rb'
     - 'lib/rpush/daemon/delivery.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
     - 'lib/rpush/embed.rb'
     - 'spec/support/simplecov_helper.rb'
 
@@ -691,6 +713,7 @@ Style/NumericPredicate:
     - 'lib/rpush/daemon.rb'
     - 'lib/rpush/daemon/apnsp8/delivery.rb'
     - 'lib/rpush/daemon/app_runner.rb'
+    - 'lib/rpush/daemon/dispatcher/apns_tcp.rb'
     - 'lib/rpush/daemon/feeder.rb'
     - 'lib/rpush/daemon/store/redis.rb'
     - 'lib/rpush/daemon/synchronizer.rb'
@@ -753,12 +776,16 @@ Style/RescueStandardError:
 Style/SafeNavigation:
   Exclude:
     - 'lib/rpush/client/active_model/apns/notification.rb'
+    - 'lib/rpush/daemon/apns/feedback_receiver.rb'
     - 'lib/rpush/daemon/app_runner.rb'
+    - 'lib/rpush/daemon/dispatcher/apns_tcp.rb'
+    - 'lib/rpush/daemon/dispatcher/tcp.rb'
     - 'lib/rpush/daemon/dispatcher_loop.rb'
     - 'lib/rpush/daemon/feeder.rb'
     - 'lib/rpush/daemon/interruptible_sleep.rb'
     - 'lib/rpush/daemon/rpc/server.rb'
     - 'lib/rpush/daemon/signal_handler.rb'
+    - 'lib/rpush/daemon/tcp_connection.rb'
     - 'lib/rpush/embed.rb'
     - 'lib/rpush/logger.rb'
 
@@ -830,3 +857,4 @@ Style/WhileUntilModifier:
 Style/ZeroLengthPredicate:
   Exclude:
     - 'lib/rpush/daemon/app_runner.rb'
+    - 'lib/rpush/daemon/dispatcher/apns_tcp.rb'
