Rails 7.2 requires Ruby >= 3.1

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -58,6 +58,10 @@ jobs:
 
         client: ['active_record', 'redis']
 
+        exclude:
+          - ruby: '3.0'
+            gemfile: 'rails_7.2'
+
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
 
