--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,11 +52,15 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0', 'rails_7.1']
+        gemfile: ['rails_6.0', 'rails_6.1', 'rails_7.0', 'rails_7.1', 'rails_7.2']
 
         ruby: ['3.0', '3.1', '3.2', '3.3']
 
         client: ['active_record', 'redis']
+
+        exclude:
+          - ruby: '3.0'
+            gemfile: 'rails_7.2'
 
     env: # $BUNDLE_GEMFILE must be set at the job level, so it is set for all steps
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
